All changes done.

--- a/commodities/commodities.csproj
+++ b/commodities/commodities.csproj
@@ -270,8 +270,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\GetRoot.cshtml" />
-    <Content Include="Views\Home\GetRoot2.cshtml" />
+    <Content Include="Views\Home\CommoditiesTreeView.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
